--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/components": "^0.0.41",
+    "@react-email/tailwind": "^1.0.5",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "stripe": "^18.2.0",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.42"
   },
@@ -33,7 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "prisma": "^6.8.2",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.8",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.2",
     "typescript": "^5.8.3"
