--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.5.1",
     "stripe": "^18.2.0",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.42"
